--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ before_install:
   - gem install xcpretty-travis-formatter
   - xcrun simctl list
 install: echo "<3"
-
-pod install
+#pod install
 xcode_workspace: MovieDB.xcworkspace
 
 # whitelist
