--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - gem install xcpretty -v 0.2.2
   - gem install xcpretty-travis-formatter
   - xcrun simctl list
-install: echo "<3"
+#install: echo "<3"
 #pod install
 xcode_workspace: MovieDB.xcworkspace
 
