--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,10 @@ git:
 before_install:
   - brew update
   - brew outdated xctool || brew upgrade xctool
-  - gem install cocoapods -v 1.0.1
-  - gem install xcpretty -v 0.2.2
+  - pod install --repo-update
   - gem install xcpretty-travis-formatter
   - xcrun simctl list
-install: echo "<3"
 
-pod install
 xcode_workspace: MovieDB.xcworkspace
 
 # whitelist
