--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 
 #xcode_workspace: MovieDB.xcworkspace
 script:
+  - set -o pipefail
   - xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator11.3 -destination "OS=11.3,name=iPhone 6S Plus"  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build test | xcpretty;
 
 after_success:
