--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ git:
   depth: 10
 before_install:
 - bundle install
+- bundle exec pod install
 - bundle exec pod keys set MovieDBApiKey $MOVIE_DB_API_KEY MovieDB
 - pod install --repo-update
 - xcrun simctl list
