--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,8 @@ git:
   depth: 10
 before_install:
 - bundle install
-- bundle exec pod install
 - bundle exec pod keys set MovieDBApiKey $MOVIE_DB_API_KEY MovieDB
-- pod install --repo-update
+- bundle exec pod install --repo-update
 - xcrun simctl list
 script:
 - set -o pipefail
