--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ git:
   depth: 10
 before_install:
 - bundle install
+- bundle exec pod env
+- gem install cocoapods-keys #should be in bundle install (Gemfile)
 - bundle exec pod keys set MovieDBApiKey $MOVIE_DB_API_KEY MovieDB
 - xcrun simctl list
 install:
