--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,14 @@ osx_image: xcode9.4
 git:
   depth: 10
 before_install:
+- gem install bundler
 - bundle install
 - bundle info cocoapods-keys #debug
 - bundle exec pod env #debug
-- gem install cocoapods-keys #should be in bundle install (Gemfile)
-- pod keys set MovieDBApiKey $MOVIE_DB_API_KEY MovieDB
+#- gem install cocoapods-keys #should be in bundle install (Gemfile)
+- bundle exec pod keys #debug
+- bundle exec pod keys set MovieDBApiKey $MOVIE_DB_API_KEY MovieDB
+- bundle exec pod keys #debug
 - xcrun simctl list
 install:
 - bundle exec pod install --repo-update
