--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 script:
 - set -o pipefail
 - xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator11.4
-  -destination 'platform=iOS Simulator,name=iPhone 8,OS=11.4"  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+  -destination "platform=iOS Simulator,name=iPhone 8,OS=11.4"  CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
   ENABLE_TESTABILITY=YES clean build test | xcpretty;
 after_success:
 - bash <(curl -s https://codecov.io/bash)
