test scheme improvements - parallel execution

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: objective-c
+xcode_destination: platform=iOS Simulator,name=iPhone 8,OS=12.1
+osx_image: xcode10.1
 cache:
 - bundler
 - cocoapods
-osx_image: xcode10.1
 git:
   depth: 10
 before_install:
@@ -19,11 +20,10 @@ install:
 - bundle exec pod install --repo-update
 script:
 - set -o pipefail
-- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
+- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build test | xcpretty;
   #Data layer unit tests
-- xcodebuild -scheme MovieDBTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
-- xcodebuild -scheme MovieDBDataTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
-#   clean \
+# - xcodebuild -scheme MovieDBTests -workspace MovieDB.xcworkspace test | xcpretty;
+# - xcodebuild -scheme MovieDBDataTests -workspace MovieDB.xcworkspace test | xcpretty;
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 branches:
