--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
 - bundle exec pod install --repo-update
 script:
 - set -o pipefail
-- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build test | xcpretty;
+- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build test -parallel-testing-enabled YES -parallel-testing-worker-count 4;
   #Data layer unit tests
 # - xcodebuild -scheme MovieDBTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
 # - xcodebuild -scheme MovieDBDataTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
