--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,10 +4,13 @@ disabled_rules:
 
 opt_in_rules:
   - empty_count
-#  - force_unwrapping
+  - anyobject_protocol
+  - force_unwrapping
 
 included:
   - MovieDB
+  - Data
+  - Domain
   - MovieDBTests
   - MovieDBDataTests
 
