--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ script:
 - set -o pipefail
 - xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
   #Data layer unit tests
-- xcodebuild -scheme MovieDBTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
-- xcodebuild -scheme MovieDBDataTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
+- sh run_all_tests.sh
 #   clean \
 # - bundle exec danger
 after_success:
-#- danger-swift ci
+- bundle exec danger dry_run #TODO run CI
 - bash <(curl -s https://codecov.io/bash)
 branches:
   only:
