added back gem xcode-install fastlane; added Gym-/Scanfile

--- a/MovieDB.xcodeproj/xcshareddata/xcschemes/MovieDB.xcscheme
+++ b/MovieDB.xcodeproj/xcshareddata/xcschemes/MovieDB.xcscheme
@@ -67,6 +67,16 @@
                ReferencedContainer = "container:MovieDB.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6A4A2D74206FD337008BF540"
+               BuildableName = "MovieDBDataTests.xctest"
+               BlueprintName = "MovieDBDataTests"
+               ReferencedContainer = "container:MovieDB.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
