--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,10 @@ git:
 install:
 - sh install.sh
 script:
-- set -o pipefail
+- set -eo pipefail
 - xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
   #Data layer unit tests
-- sh run_all_tests.sh
-#   clean \
-# - bundle exec danger
+- bundle exec fastlane all_tests
 after_success:
 - bundle exec danger dry_run #TODO run CI
 - bash <(curl -s https://codecov.io/bash)
