--- a/MovieDB.xcodeproj/xcshareddata/xcschemes/MovieDBDataTests.xcscheme
+++ b/MovieDB.xcodeproj/xcshareddata/xcschemes/MovieDBDataTests.xcscheme
@@ -8,21 +8,7 @@
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6A839580205861B600CD0CDD"
-               BuildableName = "MovieDB.app"
-               BlueprintName = "MovieDB"
-               ReferencedContainer = "container:MovieDB.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
             buildForAnalyzing = "YES">
@@ -76,15 +62,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6A4A2D74206FD337008BF540"
-            BuildableName = "MovieDBDataTests.xctest"
-            BlueprintName = "MovieDBDataTests"
-            ReferencedContainer = "container:MovieDB.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
