--- a/.travis.yml
+++ b/.travis.yml
@@ -2,29 +2,19 @@ language: objective-c
 cache:
 - bundler
 - cocoapods
-osx_image: xcode10.1
+osx_image: xcode10.2
 git:
   depth: 10
-before_install:
-# - brew install xctool
-- gem --version
-- gem install bundler
-- bundle install
-- bundle
-- bundle exec pod env #debug
-- bundle exec pod keys set MovieDBApiKey $MOVIE_DB_API_KEY MovieDB
-#- bundle exec pod keys #debug
-- xcrun simctl list
 install:
-- bundle exec pod install --repo-update
+- sh install.sh
 script:
-- set -o pipefail
-- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.1 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.1" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
+- set -eo pipefail
+- ls -al
+- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.2 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.2" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
   #Data layer unit tests
-- xcodebuild -scheme MovieDBTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
-- xcodebuild -scheme MovieDBDataTests -workspace MovieDB.xcworkspace -destination 'platform=iOS Simulator,name=iPhone 8,OS=12.1' test | xcpretty;
-#   clean \
+- bundle exec fastlane all_tests
 after_success:
+- bundle exec danger dry_run #TODO run CI
 - bash <(curl -s https://codecov.io/bash)
 branches:
   only:
