Swift5: updated classes, swiftlint, tests

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,9 +3,17 @@ disabled_rules:
   - type_name
 
 opt_in_rules:
-  - empty_count
   - anyobject_protocol
+  - empty_count
+  - empty_string
+  - empty_xctest_method
+  - explicit_init
+  - explicit_self
   - force_unwrapping
+  - fatal_error_message
+  - first_where
+  - last_where
+  - unused_import
 
 included:
   - MovieDB
@@ -14,5 +22,16 @@ included:
   - MovieDBTests
   - MovieDBDataTests
 
+reporter: "xcode"
+
 function_body_length:
-  warning: 50
+  warning: 10
+  error: 20
+file_length:
+  warning: 100
+  error: 150
+
+# Rules severity
+
+redundant_void_return:
+  severity: error
