--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -13,6 +13,10 @@ opt_in_rules:
   - fatal_error_message
   - first_where
   - last_where
+  - literal_expression_end_indentation
+  - lower_acl_than_parent
+  - private_action
+  - static_operator
   - unused_import
 
 included:
