--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -4,6 +4,10 @@ disabled_rules:
 
 opt_in_rules:
   - anyobject_protocol
+  - contains_over_first_not_nil
+  - convenience_type
+  - discouraged_object_literal
+  - discouraged_optional_boolean
   - empty_count
   - empty_string
   - empty_xctest_method
