--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 - xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.2 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.2" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
   #Data layer unit tests
 - bundle exec fastlane all_tests
-- bundle exec danger dry_run #TODO run CI
+- bundle exec danger #dry_run
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 branches:
