--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ script:
 - ls -al
 - xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator12.2 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.2" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
   #Data layer unit tests
+- tree -a
 - bundle exec fastlane all_tests
 - bundle exec danger #dry_run
 after_success:
