jazzy deploy step

--- a/.jazzy.yaml
+++ b/.jazzy.yaml
@@ -5,3 +5,12 @@ module_version: 0.1.0
 github_url: https://github.com/timstudt/movieDB
 copyright: 'Copyright © 2018 Tim Studt. All rights reserved.'
 readme: About.md
+
+# swift_version: 5.0
+
+theme: fullwidth
+
+exclude:
+  - generated/**
+  - SourceryTemplates/**
+  - fastlane/**
