--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,14 @@ script:
 - bundle exec danger #dry_run
 after_success:
 - bash <(curl -s https://codecov.io/bash)
+- bundle exec fastlane generate_docs
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $DANGER_GITHUB_API_TOKEN  # Set in the settings page of your repository, as a secure variable
+  local-dir: docs
+  on:
+    branch: master
 branches:
   only:
   - master
