--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 - sh install.sh
 script:
 - set -eo pipefail
-- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator13.2 -destination "platform=iOS Simulator,name=iPhone 8,OS=13.2" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
+- xcodebuild -scheme MovieDB -workspace MovieDB.xcworkspace -sdk iphonesimulator13.2 -destination "platform=iOS Simulator,name=iPhone 8,OS=12.4" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ENABLE_TESTABILITY=YES clean build | xcpretty;
   #Data layer unit tests
 - bundle exec fastlane all_tests
 - bundle exec danger #dry_run
@@ -21,7 +21,7 @@ deploy:
   provider: pages
   target_branch: "gh-pages"
   verbose: true
-  skip_cleanup: true
+  cleanup: false
   keep_history: false # NOTE: set true when not using gh-pages as target
   github_token: $DANGER_GITHUB_API_TOKEN  # Set in the settings page of your repository, as a secure variable
   local_dir: docs
